--- a/index.html
+++ b/index.html
@@ -5,19 +5,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <input type="text" class="isim verial" placeholder="isim" oninput="veriAl()">
-    <input type="text" class="soyisim verial" placeholder="soyisim" oninput="veriAl()">
-       <div class="test">
-            <p class="isimP"></p>
-            <p class="soyisimP"></p>
-            <input type="file" id="thumbnail">
-            <img width="100px" id="preview" src="" alt="thumbnail">
+        <div class="main">
+            <div class="container">
+                <div class="row">
+                    <div class="col-3">
+                        <div class="personalinformation">
+                            <h4>Kişisel Bilgiler</h4>
+                            <input type="text" class="isim verial" placeholder="Adınız" oninput="veriAl()">
+                            <input type="text" class="soyisim verial" placeholder="Soyadınız" oninput="veriAl()">
+                        </div>
+                        <button class="yazdır">PDF Çıktı</button>
+                        <input type="file" id="thumbnail">
+                    </div>
+                    <div class="col-9">
+                        <div class="row justify-content-center">
+                            <div class="col-7">
+                                <div class="test">
+                                    <p class="isimP"></p>
+                                    <p class="soyisimP"></p>
+                                    <img width="200px" id="preview" src="" alt="thumbnail">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        <button class="yazdır">Yazdır</button>
+
+
+      
     <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
     <script src="app.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js" integrity="sha512-GsLlZN/3F2ErC5ifS5QtgpiJtWd43JWSuIgh7mbzZ8zBps+dvLusV+eNQATqgA/HdeKFVgA5v3S/cIrLF7QnIg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="pdf-write.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
